<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ADD8E6"
    tools:context=".Update" >

<EditText
android:id="@+id/editTextup1"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textView1"
android:layout_below="@+id/textView1" >
<requestFocus />
</EditText>
<TextView
android:id="@+id/textView1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
android:text="@string/nomor" />

<TextView
android:id="@+id/textView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/editTextup1"
android:layout_below="@+id/editTextup1"
android:layout_marginTop="10dp"
android:text="@string/nama" />

<EditText
android:id="@+id/editTextup2"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textView2"
android:layout_below="@+id/textView2" />

<TextView
android:id="@+id/textView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/editTextup2"
android:layout_below="@+id/editTextup2"
android:layout_marginTop="10dp"
android:text="@string/tanggal_lahir" />

<EditText
android:id="@+id/editTextup3"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textView3"
android:layout_below="@+id/textView3" />

<TextView
android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/editTextup3"
    android:layout_below="@+id/editTextup3"
    android:layout_marginTop="10dp"
    android:text="@string/jenis_kelamin" />

<EditText
android:id="@+id/editTextup4"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textView4"
android:layout_below="@+id/textView4" />

<TextView
android:id="@+id/textView5"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/editTextup4"
android:layout_below="@+id/editTextup4"
android:layout_marginTop="10dp"
android:text="@string/alamat" />

<EditText
android:id="@+id/editTextup5"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textView5"
android:layout_below="@+id/textView5" />

<Button
android:id="@+id/button1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/editTextup5"
android:layout_alignParentBottom="true"
android:text="@string/update" />

<Button
android:id="@+id/button2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignBaseline="@+id/button1"
android:layout_alignBottom="@+id/button1"
android:layout_toEndOf="@+id/textView4"
android:text="@string/back" />

    </RelativeLayout>