<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ADD8E6"
    tools:context=".Lihat_Bio" >

<TextView
android:id="@+id/textViewliat1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentEnd="true"
android:layout_alignParentTop="true"
android:layout_marginEnd="104dp"
android:layout_marginTop="20dp"
android:text="@string/textview" />

<TextView
android:id="@+id/textViewliat2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignEnd="@+id/textViewliat1"
android:layout_below="@+id/textViewliat1"
android:layout_marginTop="20dp"
android:text="@string/textview" />

<TextView
android:id="@+id/textViewliat3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textViewliat2"
android:layout_below="@+id/textViewliat2"
android:layout_marginTop="20dp"
android:text="@string/textview" />

<TextView
android:id="@+id/textViewliat4"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/textViewliat3"
android:layout_below="@+id/textViewliat3"
android:layout_marginTop="20dp"
android:text="@string/textview" />

<TextView
android:id="@+id/textViewliat5"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignEnd="@+id/textViewliat4"
android:layout_below="@+id/textViewliat4"
android:layout_marginTop="20dp"
android:text="@string/textview" />

<TextView
android:id="@+id/TextView05"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignBaseline="@+id/textViewliat5"
    android:layout_alignBottom="@+id/textViewliat5"
    android:layout_alignStart="@+id/TextView03"
    android:text="@string/alamat" />

<TextView
android:id="@+id/TextView03"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignBaseline="@+id/textViewliat4"
android:layout_alignBottom="@+id/textViewliat4"
android:layout_alignStart="@+id/TextView04"
android:text="@string/jenis_kelamin" />

<TextView
android:id="@+id/TextView04"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignBaseline="@+id/textViewliat3"
android:layout_alignBottom="@+id/textViewliat3"
android:layout_alignStart="@+id/TextView02"
android:text="@string/tanggal_lahir" />

<TextView
android:id="@+id/TextView02"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignBaseline="@+id/textViewliat2"
android:layout_alignBottom="@+id/textViewliat2"
android:layout_alignStart="@+id/TextView01"
android:text="@string/nama" />

<TextView
android:id="@+id/TextView01"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_above="@+id/textViewliat2"
android:layout_alignParentStart="true"
android:text="@string/nomor" />
<Button
android:id="@+id/button1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignStart="@+id/TextView05"
android:layout_below="@+id/TextView05"
android:layout_marginTop="34dp"
android:text="@string/back" />
    </RelativeLayout>
